--- a/style.css
+++ b/style.css
@@ -84,5 +84,14 @@ body {
 
 .descricao__texto {
     color: var(--cinza-secundario);
-    font-size: 16px;
+    font-size: 17px;
+}
+
+.secundario__botao {
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.container__descricao {
+    padding: 2em;
 }
