--- a/style.css
+++ b/style.css
@@ -173,9 +173,30 @@ body {
     padding: 2em;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 1283px) and (min-width: 414px) {
     .container {
         display: block;
-        background-image: none;
+        background-image:none;
+    }
+
+    .container__imagem {
+        width: 50vw;
+    }
+
+    .container__caixa {
+        margin: 2em 2em;
+    }
+
+    .secundario {
+        margin: 0;
+        text-align: center;
+    }
+
+    .secundario__imagem {
+        width: 50vw;
+    }
+
+    .dispositivos__lista {
+        display: block;
     }
 }
