--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ body {
     padding: 2em;
 }
 
-@media screen and (max-width: 1283px) and (min-width: 414px) {
+@media screen  and (min-width: 414px) and (max-width: 1155px) {
     .container {
         display: block;
         background-image:none;
@@ -184,19 +184,29 @@ body {
     }
 
     .container__caixa {
-        margin: 2em 2em;
+        margin: 3em 5em;
     }
 
-    .secundario {
-        margin: 0;
-        text-align: center;
+    .container__titulo {
+        font-size: 87px;
+    }
+
+    .container__botao {
+        font-size: 40px;
+    }
+
+    .container__aviso {
+        font-size: 35px;
     }
 
     .secundario__imagem {
-        width: 50vw;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        margin: 2em 2em;
     }
 
-    .dispositivos__lista {
-        display: block;
+    .descricao__titulo {
+        font-size: 60px;
     }
 }
